Add filtering and state to index items
