# mlserver/handlers/model_repository.py
@@ -1,10 +1,14 @@
+import asyncio
+
 from ..settings import ModelSettings
 from ..registry import MultiModelRegistry
 from ..repository import ModelRepository
+from ..errors import ModelNotFound
 from ..types import (
     RepositoryIndexRequest,
     RepositoryIndexResponse,
     RepositoryIndexResponseItem,
+    State,
 )
 
 
@@ -16,25 +20,44 @@ class ModelRepositoryHandlers:
     async def index(self, payload: RepositoryIndexRequest) -> RepositoryIndexResponse:
         # TODO: Filter by payload.ready flag
         all_model_settings = await self._repository.list()
-        repository_items = [
-            self._to_item(model_settings) for model_settings in all_model_settings
-        ]
+
+        repository_items = []
+        for model_settings in all_model_settings:
+            index_item = await self._to_item(model_settings)
+            if payload.ready is None:
+                repository_items.append(index_item)
+            elif payload.ready and index_item.state == State.READY:
+                repository_items.append(index_item)
+            elif not payload.ready and index_item.state != State.READY:
+                repository_items.append(index_item)
 
         return RepositoryIndexResponse(__root__=repository_items)
 
-    def _to_item(self, model_settings: ModelSettings) -> RepositoryIndexResponseItem:
+    async def _to_item(
+        self, model_settings: ModelSettings
+    ) -> RepositoryIndexResponseItem:
         item = RepositoryIndexResponseItem(
             name=model_settings.name,
-            # TODO: Set a valid state and reason
-            # https://github.com/triton-inference-server/server/blob/a95889414eae2d29073debecf2cce82dac6c2589/src/core/model_repository_manager.cc#L59-L87
-            state="",
+            state=State.UNKNOWN,
             reason="",
         )
+
+        item.state = await self._get_state(model_settings)
 
         if model_settings.parameters:
             item.version = model_settings.parameters.version
 
         return item
+
+    async def _get_state(self, model_settings: ModelSettings) -> State:
+        try:
+            model = await self._model_registry.get_model(model_settings.name)
+            if model.ready:
+                return State.READY
+        except ModelNotFound:
+            return State.UNAVAILABLE
+
+        return State.UNKNOWN
 
     async def load(self, name: str) -> bool:
         model_settings = await self._repository.find(name)
