# mlserver/types/model_repository.py
@@ -1,6 +1,7 @@
 # generated by datamodel-codegen:
 #   filename:  model_repository.yaml
 
+from enum import Enum
 from typing import List, Optional
 
 from pydantic import BaseModel, Field
@@ -10,10 +11,18 @@ class RepositoryIndexRequest(BaseModel):
     ready: Optional[bool] = None
 
 
+class State(Enum):
+    UNKNOWN = "UNKNOWN"
+    READY = "READY"
+    UNAVAILABLE = "UNAVAILABLE"
+    LOADING = "LOADING"
+    UNLOADING = "UNLOADING"
+
+
 class RepositoryIndexResponseItem(BaseModel):
     name: str
     version: Optional[str] = None
-    state: str
+    state: Optional["State"] = None
     reason: str
 
 
