# openapi/model_repository.yaml
@@ -68,11 +68,16 @@ components:
             type: string
           state:
             type: string
+            enum:
+              - UNKNOWN
+              - READY
+              - UNAVAILABLE
+              - LOADING
+              - UNLOADING
           reason:
             type: string
         required:
           - name
-          - state
           - reason
     repository_index_error_response:
       title: repository_index_error_response
